fix: pwa install promt is covered by footer tabs on mobile screens

--- a/components/UI/ui.module.scss
+++ b/components/UI/ui.module.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   gap: 10px;
   @media (max-width: 724px) {
-    margin-bottom: 100px;
+    margin-bottom: 65px;
   }
 }
 
